<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MindfulnessJournalCalendar"
    android:orientation="vertical">

    <TextView
        android:id="@+id/calendar_header_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_mindfulness_journal"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <com.kizitonwose.calendar.view.CalendarView
        android:id="@+id/mindfulness_journal_events_calendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:overScrollMode="never"
        android:background="@drawable/edit_text_background"
        app:cv_dayViewResource="@layout/calendar_day_layout"
        app:cv_monthHeaderResource="@layout/calendar_day_titles_container"
        app:cv_outDateStyle="endOfGrid" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginVertical="20dp"
        android:orientation="horizontal"
        android:id="@+id/journal_review_layout"
        android:visibility="gone">

        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".70"
            android:orientation="vertical"
            android:contentDescription="@string/content_description_daily_activity_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/entry_header_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    />

                <TextView
                    android:id="@+id/mindfulness_journal_day_entry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <TextView
            android:gravity="center"
            android:id="@+id/how_was_i_today_entry"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:layout_weight=".30"
            android:fontFamily="@font/font_awesome_6_free_regular_400"
            android:textSize="60sp"
            />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/this_days_affirmation"
        android:visibility="gone"
        />

</LinearLayout>