<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MindfulnessJournalTodaysEntry"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/header_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/today_i"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

            <TextView
                android:id="@+id/daily_gratitude_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/daily_gratitude_header_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/gratitude_entry_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:inputType="textCapSentences|textMultiLine"
                android:padding="15dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:contentDescription="@string/content_description_gratitude_entry_box"/>

            <TextView
                android:id="@+id/how_was_today_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/how_was_today_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/estatic_button"
                    android:text="@string/estatic_icon"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_marginHorizontal="2dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/font_awesome_6_free_regular_400"
                    android:background="@drawable/round_button_style_not_selected"
                    android:gravity="center"
                    android:textSize="28sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/happy_button"
                    android:text="@string/happy_icon"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_marginHorizontal="2dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/font_awesome_6_free_regular_400"
                    android:background="@drawable/round_button_style_not_selected"
                    android:gravity="center"
                    android:textSize="28sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/meh_button"
                    android:text="@string/meh_icon"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_marginHorizontal="2dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/font_awesome_6_free_regular_400"
                    android:background="@drawable/round_button_style_not_selected"
                    android:gravity="center"
                    android:textSize="28sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/unhappy_button"
                    android:text="@string/unhappy_icon"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_marginHorizontal="2dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/font_awesome_6_free_regular_400"
                    android:background="@drawable/round_button_style_not_selected"
                    android:gravity="center"
                    android:textSize="28sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/sad_button"
                    android:text="@string/sad_icon"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_marginHorizontal="2dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/font_awesome_6_free_regular_400"
                    android:background="@drawable/round_button_style_not_selected"
                    android:gravity="center"
                    android:textSize="28sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/angry_button"
                    android:text="@string/angry_icon"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_marginHorizontal="2dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/font_awesome_6_free_regular_400"
                    android:background="@drawable/round_button_style_not_selected"
                    android:gravity="center"
                    android:textSize="28sp" />

            </LinearLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_style"
                android:text="@string/save"
                android:textAlignment="center"
                android:gravity="center"
                android:textColor="#e9ddff"
                android:visibility="visible" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>