<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.GratitudeJournalCalendar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/calendar_header_text_view"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:text="@string/your_gratitude_journal"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            />

        <com.kizitonwose.calendar.view.CalendarView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:id="@+id/gratitude_journal_events_calendar"
            android:overScrollMode="never"
            app:cv_dayViewResource="@layout/calendar_day_layout"
            android:background="@drawable/edit_text_background"
            app:cv_monthHeaderResource="@layout/calendar_day_titles_container"
            app:cv_outDateStyle="endOfGrid"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/gratitude_journal_day_entry"
            android:visibility="gone"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            />

    </LinearLayout>

</FrameLayout>